--- a/src/app/userpage2/userpage2.component.html
+++ b/src/app/userpage2/userpage2.component.html
@@ -43,6 +43,10 @@
                             <i class="ace-icon fa fa-envelope-o bigger-110"></i>
                             <span class="bigger-110">Обновить фотографию</span>
                         </button>
+                        <button *ngIf="myId==id"  class="btn btn-sm btn-block btn-danger">
+                            <i class="ace-icon fa fa-envelope-o bigger-110"></i>
+                            <span class="bigger-110">Редактировать</span>
+                        </button>
                     </div><!-- /.col -->
 
                     <div class="col-xs-12 col-sm-9">
