--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,6 +2,7 @@
     <nav class="navbar navbarx navbar-dark bg-dark">
         <div class="navbar-blocks">
             <div class="navbar-menu">
+              <a  mat-raised-button class="mr-2" routerLink="/">Главная</a>
                 <a *ngIf="isLogin && !isAdmin" mat-raised-button [ngClass]="UserInfo.banTime!=undefined ? 'disabled mr-2':'mr-2'" (click)="addNewAdvertisement()"><i class="fas fa-plus-circle"></i> Добавить Объявление</a>
                 <a  *ngIf="isAdmin" mat-raised-button class="mr-2" routerLink="/admin/changeprop">Пользователи</a>
                 <a  *ngIf="isAdmin" mat-raised-button сlass="m-2" routerLink="/admin/allDocuments">Документы</a>
