--- a/src/app/allusers/notifications/notifications.component.html
+++ b/src/app/allusers/notifications/notifications.component.html
@@ -17,9 +17,9 @@
 							</div>
 						</div>
 						<div class="all">
-							<a href="/myorders" ><button *ngIf="not.notification.type=='TAKE_ADVERTISEMENT' || not.notification.type=='RECEIVE_SERVICE'" type="button b" class="btn btn-success" (click)="onAccept(not)">Принять</button></a>
-							<button type="button" *ngIf="not.notification.type=='TAKE_ADVERTISEMENT' || not.notification.type=='RECEIVE_SERVICE'" style="color:white !important;" class="btn btn-success ml-2"(click)="onReject(not)">Отклонить</button>
-							<button  type="button" class="btn btn-success ml-2 " ><a href="/adv/{{not.notification.advertisementId}}" class="ft">O заказе</a></button>
+							<a href="/myorders" ><button *ngIf="not.notification.type=='TAKE_ADVERTISEMENT' || not.notification.type=='RECEIVE_SERVICE'" type="button b" class="btn btn-success" (click)="onAccept(not)">Принять заказ</button></a>
+							<button type="button" *ngIf="not.notification.type=='TAKE_ADVERTISEMENT' || not.notification.type=='RECEIVE_SERVICE'" style="color:white !important;" class="btn btn-warning ml-2"(click)="onReject(not)">Отклонить</button>
+							<button  type="button" class="btn btn-info ml-2 " ><a href="/adv/{{not.notification.advertisementId}}" style="color:white !important">O заказе</a></button>
 						</div>
 					</div>
 					<div *ngIf="not.notification.type=='DELETE_ADVERTISEMENT'">
