--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -7,16 +7,16 @@
                     <label for="exampleInputEmail1">Имя</label>
                     <input type="text" formControlName="userName" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Имя">
                     <div *ngIf="regService.getRegForm().controls['userName'].invalid && regService.getRegForm().controls['userName'].touched" >    
-                        <small class="form-text text-muted" *ngIf="regService.getRegForm().controls['userName'].errors.minlength">Минимальное количество букв-5</small>
-                        <small  class="form-text text-muted" *ngIf="regService.getRegForm().controls['userName'].errors.maxlength">Максимальное количество букв-15</small>
+                        <b class="form-text text-muted" *ngIf="regService.getRegForm().controls['userName'].errors.required">Обязательное поле</b>
+                        <b  class="form-text text-muted" *ngIf="regService.getRegForm().controls['userName'].errors.maxlength">Максимальное количество букв-20</b>
                     </div>
                 </div>
                 <div class="form-group" >
                     <label for="exampleInputEmail1">Фамилия</label>
                     <input type="text" formControlName="userSurname" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Фамилия">
                     <div *ngIf="regService.getRegForm().controls['userSurname'].invalid && regService.getRegForm().controls['userSurname'].touched" >    
-                        <small class="form-text text-muted" *ngIf="regService.getRegForm().controls['userSurname'].errors.minlength">Минимальное количество букв-5</small>
-                        <small  class="form-text text-muted" *ngIf="regService.getRegForm().controls['userSurname'].errors.maxlength">Максимальное количество букв-15</small>
+                        <b class="form-text text-muted" *ngIf="regService.getRegForm().controls['userSurname'].errors.required">Обязательное поле</b>
+                        <b  class="form-text text-muted" *ngIf="regService.getRegForm().controls['userSurname'].errors.maxlength">Максимальное количество букв-20</b>
                     </div>
                 </div>
             </div>
@@ -34,12 +34,12 @@
                 </div>
             </div>
             <div class="col-md-4 col-sm-12">
-                <label for="example-date-input"><b>Дата рождения</b></label>
+                <label for="example-date-input">Дата рождения</label>
                 <input class="form-control" formControlName="birthDate" type="date" value="" id="example-date-input">
             </div>
             <div class="col-md-4 col-sm-12">
                 <div class="form-group" >
-                    <label for="exampleInputEmail1"><b>Email</b></label>
+                    <label for="exampleInputEmail1">Email</label>
                     <input type="text" formControlName="userEmail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
                     <div class="registration-field"
                         *ngIf="regService.getRegForm().controls['userEmail'].invalid && regService.getRegForm().controls['userEmail'].touched">  
@@ -51,19 +51,19 @@
             <div class="col-md-4 col-sm-12">
             <div formGroupName="Passwords" class="passwords">
                 <div class="form-group" >
-                    <label for="exampleInputEmail1"><b>Пароль</b></label>
+                    <label for="exampleInputEmail1">Пароль</label>
                     <input type="password" formControlName="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Пароль">
                     <div class="registration-field"
                     *ngIf="regService.getRegForm().controls['Passwords'].controls['password'].invalid && regService.getRegForm().controls['Passwords'].controls['password'].touched">  
-                    <span *ngIf="regService.getRegForm().controls['Passwords'].controls['password'].errors.minlength">Минимальное количество букв-5</span>    
+                    <b *ngIf="regService.getRegForm().controls['Passwords'].controls['password'].errors.minlength">Минимальное количество букв-5</b>    
                     </div>
                 </div>
                 <div class="form-group" >
-                    <label for="exampleInputEmail1"><b>Повторите Пароль</b></label>
+                    <label for="exampleInputEmail1">Повторите Пароль</label>
                     <input type="password" formControlName="confirmPassword" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Пароль">
                     <div class="registration-field"
                         *ngIf="regService.getRegForm().controls['Passwords'].controls['confirmPassword'].invalid && regService.getRegForm().controls['Passwords'].controls['confirmPassword'].touched">  
-                        <span *ngIf="regService.getRegForm().controls['Passwords'].controls['confirmPassword'].errors.confirm">не совпадают</span>    
+                        <b *ngIf="regService.getRegForm().controls['Passwords'].controls['confirmPassword'].errors.confirm">Не совпадают</b>    
                     </div>
                 </div>
             </div>
