--- a/src/app/student/add-advertisement/add-advertisement.component.html
+++ b/src/app/student/add-advertisement/add-advertisement.component.html
@@ -9,11 +9,14 @@
 			</div>
             <div class="col-lg-4 col-md-10">
                 <div class="form-group">
-                    <label  for="exampleInputEmail1">Название</label>
+                    <label  for="exampleInputEmail1">Название * </label>
                     <input  formControlName="advertisementName" type="text" class="form-control" id="Input1" aria-describedby="emailHelp" placeholder="Название">
+                    <div *ngIf="advService.getAdvForm().controls['advertisementName'].invalid && advService.getAdvForm().controls['advertisementName'].touched" >    
+                        <b style="color:red;"class="form-text " *ngIf="advService.getAdvForm().controls['advertisementName'].errors.required">Обязательное поле</b>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label  for="sel1">Раздел</label>
+                    <label  for="sel1">Раздел *</label>
                     <select formControlName="advertisementSection" class="custom-select" id="sel1" placeholder="Выберите Раздел">  
                         <option *ngFor="let subject of subjects" value="{{subject.name}}">{{subject.translateName}}</option>  
                       </select>
@@ -23,12 +26,18 @@
                      <input formControlName='deadlineDate' class="form-control" type="date"  id="example-date-input">
                 </div>
                 <div class="form-group">
-                    <label for="example-date-input" class="col-xs-2 col-form-label">Цена (РУБ.)</label>
-                    <input formControlName='budget' class="form-control" type="text"  id="example-number-input">
+                    <label for="example-date-input" class="col-xs-2 col-form-label">Цена (РУБ.) *</label>
+                    <input (keypress)="numberOnly($event)" formControlName='budget' class="form-control" type="text"  id="example-number-input">
+                    <div *ngIf="advService.getAdvForm().controls['budget'].invalid && advService.getAdvForm().controls['budget'].touched" >    
+                        <b style="color:red !important;" class="form-text" *ngIf="advService.getAdvForm().controls['budget'].errors.required">Обязательное поле</b>
+                    </div>
                 </div>          
                 <div class="form-group">
                     <label for="exampleInputEmail1">Описание</label>
                     <textarea formControlName='description' type="password" class="form-control" id="Input2" rows="5" aria-describedby="emailHelp" placeholder="Описание"></textarea>
+                    <div *ngIf="advService.getAdvForm().controls['description'].invalid && advService.getAdvForm().controls['description'].touched" >    
+                        <b style="color:red !important;" class="form-text" *ngIf="advService.getAdvForm().controls['description'].errors.required">Обязательное поле</b>
+                    </div>
                 </div>
 
                 <div class="form-group">
@@ -83,8 +92,11 @@
                 </div>
             </div>
             <div class="col-md-4 col-sm-4 d-flex justify-content-center">
-                <button type="button" (click)="onSubmit()" class="btn btn-success mb-5">Создать</button>
-            </div> 
+                <button type="button" (click)="onSubmit()" class="btn btn-success ">Создать</button>
+            </div>
+            <div class="mb-5">
+                <span><b style="color:red;" >{{errorMessage}}</b></span>  
+            </div>
         </div>
     </div>
 </form>
