--- a/src/app/student/update-advertisement/update-advertisement.component.html
+++ b/src/app/student/update-advertisement/update-advertisement.component.html
@@ -14,7 +14,7 @@
                 <div class="form-group">
                     <label  for="sel1">Раздел</label>
                     <select formControlName="advertisementSection" class="custom-select" id="sel1" placeholder="Выберите Раздел">  
-                        <option *ngFor="let subject of subjects" value="{{subject.name}}">{{subject.translateName}}</option>  
+                        <option *ngFor="let subject of subjects" value="{{subject.translateName}}">{{subject.translateName}}</option>  
                       </select>
                 </div>
                 <div class="form-group">
