fix group subjects

--- a/src/app/UserAndGroupComponents/group-create/group-create.component.html
+++ b/src/app/UserAndGroupComponents/group-create/group-create.component.html
@@ -16,7 +16,7 @@
             <div class="col-md-4 col-sm-12">
               <label  for="sel1">Раздел</label>
               <select formControlName="groupSection" class="custom-select" id="sel1" placeholder="Выберите Раздел">
-                  <option *ngFor="let subject of subjects" value="{{subject.translateName}}">{{subject.name}}</option>
+                  <option *ngFor="let subject of subjects" value="{{subject.translateName}}">{{subject.translateName}}</option>
               </select>
             </div>
             <div class="col-md-4 col-sm-12">
