--- a/src/app/UserAndGroupComponents/group-list/group-list.component.html
+++ b/src/app/UserAndGroupComponents/group-list/group-list.component.html
@@ -15,7 +15,7 @@
               <label  for="sel1">Раздел</label>
               <select formControlName="groupSection" class="custom-select" id="sel1" placeholder="Выберите Раздел">
                   <option value="">Любой</option>
-                  <option *ngFor="let subject of subjects" value="{{subject.translateName}}">{{subject.name}}</option>
+                  <option *ngFor="let subject of subjects" value="{{subject.translateName}}">{{subject.translateName}}</option>
               </select>
             </div>
             <button class="btn btn-light btn-primary-spacing" (click)="search()">Search</button>
