--- a/src/app/UserAndGroupComponents/group-list/group-list.component.html
+++ b/src/app/UserAndGroupComponents/group-list/group-list.component.html
@@ -18,8 +18,8 @@
                   <option *ngFor="let subject of subjects" value="{{subject.translateName}}">{{subject.translateName}}</option>
               </select>
             </div>
-            <button class="btn btn-light btn-primary-spacing" (click)="search()">Search</button>
-            <button class="btn btn-dark btn-primary-spacing" (click)="closeSearchPanel()">Cancel</button>
+            <button class="btn btn-light btn-primary-spacing" (click)="search()">Поиск</button>
+            <button class="btn btn-dark btn-primary-spacing" (click)="closeSearchPanel()">Отмена</button>
         </form>
   </div>
   <div id="content">
